# pylems

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README  README.html  README.md  README.org  pylems  pylems.org  readwrite.py  runlems.py  setup.cfg  setup.py  testpy2.sh  testpy3.sh
.github/workflows/: ci.yml  examples.yml
ci/: run-apitest.sh  run-examples-ghactions.sh
doc/: Makefile  conf.py  index.rst  lems.base.rst  lems.dlems.rst  lems.model.rst  lems.parser.rst  lems.rst  lems.sim.rst  migrate_docstrings.sh  modules.rst
examples/: HH_Cell.xml  HH_Channel.xml  HH_Environment.xml  HH_Models.xml  HH_Sim.xml  LEMS_NML2_Ex0.xml  MultiRunSimulation.xml  SimpleNetwork.xml  SimpleNetwork_new.xml  SimpleSimulation.xml  SimpleTest.xml  apitest.py  apitest2.py  apitest3.py  apitest_maxmin.py  birgit.xml  bounce-conditional.xml  bounce.xml  curvetooth.xml  curvetooth_long.xml  e4tmp.xml  ex-flat-multi.xml  ex-flat.xml  ex-missing.xml  ex-properties.xml  ex1canonical.xml  ex2dims.xml  example0.xml  example1.strict.xml  example1.xml  example10_Q10.xml  example1_nacurrent.xml  example1_new.xml  example1_save.xml  example1a.xml  example2.xml  example3.xml  example3weight.xml  example4.xml  example5.xml  (+32 more)
examples/devexamples/: GridNetwork.xml  SK.xml  SimpleDV.xml  birgit.xml  example3weight.xml  net1-maybe.xml  net1presentation.xml  probability.xml  simple_net.xml  (+1 more)
lems/: __init__.py  api.py  base.py  errors.py  exceptions.py  parser.py  run.py  util.py
pylems/: main.py  options.py
schemas/: LEMS.xsd
xsl/: canonical.xsl
(+58 files in other folders)
