[metadata]
name = PyLEMS
version = 0.6.8
author = PyLEMS authors and contributors
author_email = gautham@lisphacker.org, p.gleeson@gmail.com
maintainer_email = p.gleeson@gmail.com
url = https://github.com/LEMS/pylems
description = A Python library for working with the Low Entropy Model Specification language (LEMS)
long_description = file: README.md
long_description_content_type=text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
license = LGPL-3.0-only

[options]
install_requires =
    lxml
    typing; python_version<"3.5"
    matplotlib

packages = find:

[options.packages.find]
where = .
include = lems*

[options.entry_points]
console_scripts =
    pylems = lems.run:main


[options.extras_require]
doc =
    sphinxcontrib-bibtex

dev =
    pre-commit
    ruff
    pytest

[flake8]
# ignore:
# spacing around operators, comment blocks, in argument lists
# lines too long
ignore = E501,E502,F403,F405,E231,E228,E225,E226,E265,E261
